logs/worker-session-20260316-111636.log
🚀 Starting Wiggum Worker for: edgebot-ai
📍 Project Path: /home/julien/Desktop/Free-Wiggum-opencode/projects/edgebot-ai
⏰ Started at: Mon Mar 16 11:16:36 AM EDT 2026
⚡ Token Budget: 64000
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━════

📍 Iteration 56 at Mon Mar 16 11:16:36 AM EDT 2026...
🤖 OpenCode processing: ✅ Verify GitHub Actions CI is passing - Run `cargo build` and `cargo test` locally to confirm all builds succeed. Check GitHub Actions to see all test workflows pass (no failures/cancellations). Update project status in README.md if CI is green.
[0m
> build · stepfun/step-3.5-flash:free
[0m
I'll help you verify the GitHub Actions CI is passing and complete the validation task. Let me start by checking the project structure and running builds/tests locally.
[0m→ [0mRead .agent_role
[0m→ [0mRead TASKS.md
[0m→ [0mRead .github/workflows/test.yml
[0m✱ [0mGlob "**/Cargo.toml"[90m 9 matches[0m
Now let me check the README and run local builds/tests to verify everything works:
[0m→ [0mRead Cargo.toml
[0m→ [0mRead README.md
[0m
[0m$ [0mcargo build --workspace --all-targets --all-features
/usr/bin/bash: line 1: cargo: command not found
[0m
Let me check if Rust is installed and set up the environment properly:
[0m$ [0mwhich rustc && which cargo && rustc --version && cargo --version
which: no rustc in (/home/julien/Desktop/Free-Wiggum-opencode/venv/bin:/home/julien/Desktop/Free-Wiggum-opencode/venv/bin:/home/julien/.vscode-server/data/User/globalStorage/github.copilot-chat/debugCommand:/home/julien/.vscode-server/data/User/globalStorage/github.copilot-chat/copilotCli:/home/julien/.vscode-server/cli/servers/Stable-ce099c1ed25d9eb3076c11e4a280f3eb52b4fbeb/server/bin/remote-cli:/home/julien/.local/bin:/home/julien/.nvm/versions/node/v22.21.1/bin:/usr/local/sbin:/usr/local/bin:/usr/bin:/usr/bin/site_perl:/usr/bin/vendor_perl:/usr/bin/core_perl)
[0m
[0m$ [0msource ~/.cargo/env && cargo build --workspace --all-targets --all-features
warning: edgebot-dashboard v0.1.0 (/home/julien/Desktop/Free-Wiggum-opencode/projects/edgebot-ai/edgebot-dashboard) ignoring invalid dependency `trunk` which is missing a lib target
   Compiling rosidl_runtime_rs v0.3.1
   Compiling burn-core v0.13.2
   Compiling torch-sys v0.15.0
   Compiling burn-import v0.13.2
error: failed to run custom build command for `rosidl_runtime_rs v0.3.1`

Caused by:
  process didn't exit successfully: `/home/julien/Desktop/Free-Wiggum-opencode/projects/edgebot-ai/target/debug/build/rosidl_runtime_rs-145ed82baad83f23/build-script-build` (exit status: 101)
  --- stderr

  thread 'main' (1034757) panicked at /home/julien/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/rosidl_runtime_rs-0.3.1/build.rs:10:9:
  AMENT_PREFIX_PATH environment variable not set - please source ROS 2 installation first.
  note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
warning: build failed, waiting for other jobs to finish...
error[E0425]: cannot find function `decode_borrowed_from_slice` in module `bincode::serde`
  --> /home/julien/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/burn-core-0.13.2/src/record/memory.rs:39:37
   |
39 |         let state = bincode::serde::decode_borrowed_from_slice(&args, bin_config()).unwrap();
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `bincode::serde`

For more information about this error, try `rustc --explain E0425`.
error: could not compile `burn-core` (lib) due to 1 previous error
[0m
[0m$ [0mgrep -r "bincode" /home/julien/Desktop/Free-Wiggum-opencode/projects/edgebot-ai/Cargo.toml /home/julien/Desktop/Free-Wiggum-opencode/projects/edgebot-ai/edgebot-core/Cargo.toml
/home/julien/Desktop/Free-Wiggum-opencode/projects/edgebot-ai/edgebot-core/Cargo.toml:bincode = "1"
[0m
[0m→ [0mRead edgebot-ros2/Cargo.toml
[0m→ [0mRead edgebot-core/Cargo.toml
I see there are two build issues: ROS2 environment not set up locally, and a bincode API incompatibility with Burn. Let me examine the dependencies and see if we can fix these:
Let me check the Cargo.lock to see the actual resolved bincode version and examine the Burn import code to understand the issue:
[0m→ [0mRead edgebot-core/src/inference/mod.rs[90m [limit=50][0m
[0m→ [0mRead Cargo.lock[90m [limit=100][0m
[0m✱ [0mGrep "bincode.*1\.[0-9]"[90m in . · 57 matches[0m
[93m[1m! [0mpermission requested: external_directory (/home/julien/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/bincode-1.3.3/src/*); auto-rejecting
[0m✗ [0mread failed
[91m[1mError: [0mThe user rejected permission to use this specific tool call.
[0m→ [0mRead edgebot-core/src/inference/mod.rs[90m [offset=50, limit=100][0m
Let me check if the bincode::serde module and function exist in bincode 1.3.3:
📝 Log saved: logs/iteration-56.md
📊 Token Usage: 7000 / Session: 7000 / 64000
